# angular.ts

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPERS.md  LICENSE  Makefile  README.md  RELEASE.md  STYLEGUIDE.md  eslint.config.js  index.html  legacy.d.ts  package-lock.json  package.json  playwright-jasmine.d.ts  playwright-jasmine.js  playwright.config.ts  playwright.wasm.config.ts  rollup.config.js  tsconfig.base.json  tsconfig.build.json  tsconfig.json  tsconfig.namespace-js.json  tsconfig.test.json  tsconfig.types.json  typedoc.json
.husky/: pre-commit
@types/: angular.d.ts  docs.d.ts  index.d.ts  ng.d.ts  (+3 more)
integrations/rust/crates/angular-ts/: Cargo.toml
integrations/rust/crates/angular-ts/src/: scope.rs  services.rs  token.rs
integrations/wasm/rust/: .gitignore  Cargo.toml  Makefile  NG_NAMESPACE_PARITY.md  PLAN.md  README.md  TESTING_PLAN.md  tsconfig.typecheck.json
integrations/wasm/rust/crates/angular-ts/: Cargo.toml
integrations/wasm/rust/crates/angular-ts-build/: Cargo.toml
integrations/wasm/rust/crates/angular-ts-build/src/: main.rs
integrations/wasm/rust/crates/angular-ts-build/tests/snapshots/: controller_bridge.snapshot.js  registrations.snapshot.js
integrations/wasm/rust/crates/angular-ts-macros/: Cargo.toml
integrations/wasm/rust/crates/angular-ts-macros/src/: lib.rs
integrations/wasm/rust/crates/angular-ts/src/: component.rs  injector.rs  lib.rs  module.rs  scope.rs  services.rs  wasm.rs  wasm_types.rs
integrations/wasm/rust/crates/angular-ts/tests/: compile_fail.rs  generated_contract.rs
integrations/wasm/rust/crates/angular-ts/tests/ui/: component_requires_template.rs  component_requires_template.stderr  inject_rejects_plain_string.rs  inject_rejects_plain_string.stderr  inject_requires_named_field.rs  inject_requires_named_field.stderr  wasm_bridge_rejects_generic_return.rs  wasm_bridge_rejects_generic_return.stderr
integrations/wasm/rust/examples/basic_app/: Cargo.toml  angular-ts.json  index.html
integrations/wasm/rust/examples/basic_app/src/: lib.rs
integrations/wasm/rust/examples/basic_app/templates/: todo-list.html
integrations/wasm/rust/examples/scope_bridge/: Cargo.toml  angular-ts.json  index.html
integrations/wasm/rust/examples/scope_bridge/.angular-ts/: abi.js  bootstrap.js
integrations/wasm/rust/examples/scope_bridge/pkg/: angular_ts_rust_scope_bridge.d.ts  angular_ts_rust_scope_bridge.js  angular_ts_rust_scope_bridge_bg.wasm  angular_ts_rust_scope_bridge_bg.wasm.d.ts
integrations/wasm/rust/examples/scope_bridge/src/: lib.rs
integrations/wasm/rust/examples/scope_bridge/templates/: scope-probe.html
integrations/wasm/rust/tests/: scope_bridge.test.ts  todo_basic.test.ts
integrations/wasm/rust/tool/: bootstrap-bridge.typecheck.ts  check-ng-namespace-parity.mjs
(+3159 files in other folders)
