[package]
name = "angular-ts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Strict Rust/Wasm facade for authoring AngularTS applications."

[dependencies]
angular-ts-macros = { path = "../angular-ts-macros" }
