[package]
name = "angular-ts-build"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Build helper for Rust-authored AngularTS applications."

[[bin]]
name = "angular-ts-rs"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
