[package]
name = "angular-ts-rust-basic-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
angular-ts = { path = "../../crates/angular-ts" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "=0.3.77"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "=0.4.50"
